# lien

./: .gitignore  .gitmodules  CMakeLists.txt  azure-pipelines.yml
cmake/: lien.cmake
lib/: CMakeLists.txt
lib/base/: CMakeLists.txt
lib/base/include/ien/: alignment.hpp  alloc.hpp  arithmetic.hpp  assert.hpp  bit_iterator.hpp  bit_tools.hpp  bit_view.hpp  debug.hpp  fixed_vector.hpp  multi_array_bit_iterator.hpp  multi_array_iterator.hpp  platform.hpp  type_traits.hpp
lib/base/include/ien/allocators/: aligned_allocator.hpp
lib/base/src/: alloc.cpp  assert.cpp  bit_view.cpp  platform.cpp
lib/image/: CMakeLists.txt
lib/image/include/ien/: generic_image.hpp  image.hpp  image_ops.hpp  image_planar_data.hpp  image_rect_view.hpp  image_truncate.hpp  image_unpacked_data.hpp  image_view.hpp  interleaved_image.hpp  interleaved_image_view.hpp  packed_image.hpp  packed_image_view.hpp  pixel_trait.hpp  planar_image.hpp  planar_image_view.hpp  rect.hpp  rgba_channel.hpp
lib/image/include/ien/internal/: image_ops_args.hpp
lib/image/include/ien/internal/arm/: image_ops_arm.hpp
lib/image/include/ien/internal/arm/neon/: image_ops_neon.hpp
lib/image/include/ien/internal/std/: image_ops_std.hpp
lib/image/include/ien/internal/x86/: image_ops_x86.hpp
lib/image/src/: generic_image.cpp  image.cpp  image_ops.cpp  image_planar_data.cpp  image_rect_view.cpp  image_truncate.cpp  image_unpacked_data.cpp  image_view.cpp  interleaved_image.cpp  interleaved_image_view.cpp  packed_image.cpp  packed_image_view.cpp  pixel_trait.cpp  planar_image.cpp  planar_image_view.cpp
lib/image/src/internal/arm/: image_ops_arm.cpp
lib/image/src/internal/arm/neon/: image_ops_neon.cpp
lib/image/src/internal/std/: image_ops_std.cpp
lib/image/src/internal/x86/: image_ops_x86.cpp
lib/image/src/internal/x86/avx2/: image_ops_x86.cpp
lib/image/src/internal/x86/sse/: image_ops_x86.cpp
lib/image/src/internal/x86/sse2/: image_ops_x86.cpp
lib/parallel/: CMakeLists.txt
lib/parallel/include/ien/: parallel.hpp  task_queue.hpp
lib/parallel/src/: parallel.cpp  task_queue.cpp
lib/strutils/: CMakeLists.txt
lib/strutils/include/ien/: strutils.hpp
lib/strutils/src/: strutils.cpp
test/: CMakeLists.txt
test/base/: CMakeLists.txt
test/base/src/: aligned_allocator.cpp  alloc.cpp  arithmetic.cpp  bit_iterator.cpp  bit_tools.cpp  fixed_vector.cpp
test/image/: CMakeLists.txt
test/image/src/: image_ops.cpp  image_truncate_sse.cpp
test/image/src/arm/: image_ops.cpp  image_ops_arm.cpp
test/image/src/benchmarks/: image_ops.cpp  image_ops_benchmarks.cpp
test/image/src/x86/: image_ops.cpp  image_ops_x86.cpp  utils.hpp
test/parallel/: CMakeLists.txt
test/parallel/src/: parallel_benchmarks.cpp
test/strutils/: CMakeLists.txt
test/strutils/src/: strutils_split.cpp
